--- a/css/abm/abm_styles.css
+++ b/css/abm/abm_styles.css
@@ -57,39 +57,71 @@ form > div > label{
     font-family: monospace;
     flex-grow: 1;
     margin-right: px;
-    text-align: center;
 }
-form > div > input{
+form > div > input, form > div > select{
     height: 5vh;
     min-width: 100px;
+    flex-basis: 0;
     flex-grow: 4;
-    padding: 0;
+    padding: 0 1rem;
     margin: 0;
     text-align: center;
     font-size: 1.5em;
     border-style: none;
-}
-#search-input{
-    border-radius: 20px 0px 0px 20px;
+    border-radius: 1rem;
 }
 input[type="submit"]{
     background-color: var(--var-color-1);
     color: black;
     font-size: 2.2em;
-    border-radius: 0px 20px 20px 0px;
     margin: 0;
     border: none;
     transition: all .2s;
 }
 input[type="submit"]:hover{
-    background-color: rgb(68, 150, 243);
+    letter-spacing: 2px;
+    background-color: rgb(243, 202, 68);
     cursor: pointer;
+}
+#containerMovies{
+    transition: all 1s;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    margin-top: 10px;
+    max-height: 100vh;
+    overflow-y: scroll;
+}
+#containerMovies > a{
+    width: 100%;
+    height: 300px;
+    border: white solid 1px;
+}
+#containerMovies > a *{
+    height: 100%;
+    flex-basis: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-grow: 1;
+    font-size: 1.4em;
+    font-family: monospace;
+    color: #fff;
+}
+#containerMovies img{
+    flex-grow: 0;
+    object-fit: contain;
+}
+#containerMovies a{
+    text-decoration: none;
 }
 .format-table{
     display: grid;
     height: 8vh;
     align-items: center;
-    grid-template-columns: repeat(9, minmax(50px, 1fr));
+    grid-auto-columns: minmax(50px, 1fr);
+    grid-auto-flow: column;
     border: 2px solid black;
     color: #fff ;
     margin: 30px 0px;
@@ -97,7 +129,8 @@ input[type="submit"]:hover{
     border-radius: 10px;
 }
 .format-table > *{
-    min-width: 100px;
+    margin: 0;
+    min-width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -106,7 +139,7 @@ input[type="submit"]:hover{
     border-left: 2px solid white;
     border-right: 2px solid white;
 }
-a{
+/* a{
     height: min-content;
     width: min-content;
     text-align: center;
@@ -118,7 +151,7 @@ a{
     height: min-content;
     width: min-content;
     cursor: pointer;
-}
+} */
 .delete{
     color: red; 
 }
