--- a/css/abm/abm_styles.css
+++ b/css/abm/abm_styles.css
@@ -120,6 +120,7 @@ input[type="submit"]:hover{
     display: grid;
     height: 15vh;
     align-items: center;
+    justify-items: center;
     grid-auto-columns: minmax(50px, 1fr);
     grid-auto-flow: column;
     border: 2px solid black;
@@ -127,24 +128,18 @@ input[type="submit"]:hover{
     margin: 30px 0px;
     padding: 2px;
     border-radius: 10px;
+    font-family: monospace;
+    font-size: 1.2rem;
+    text-align: center;
 }
 .format-table > *{
-    font-family: monospace;
-    margin: 0;
-    min-width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
+    
 }
 .format-table img{
-    width: 100%;
-    object-fit: contain;
+    width: 60%;
+    object-fit: scale-down;
 }
-/* a{
+.format-table > a{
     height: min-content;
     width: min-content;
     text-align: center;
@@ -156,7 +151,10 @@ input[type="submit"]:hover{
     height: min-content;
     width: min-content;
     cursor: pointer;
-} */
+}
+.format-table > a:visited, .format-table > a:link{
+    color: #fff;
+}
 .delete{
     color: red; 
 }
